Добавляє розмітку html
детально

--- a/proba.html
+++ b/proba.html
@@ -1,36 +1,13 @@
-Привет, студент GoIT!
-
-Еще до старта курса Full Stack Online 48 ты уже можешь начать обучение. 
-Мы подготовили для тебя базовые материалы для самостоятельной подготовки. Сначала тебе необходимо зарегистрироваться в нашей учебной системе. Для этого нужно сделать четыре простых шага.
-Шаг 1. Переходи по ссылке:  https://www.schoology.com/ 
-Шаг 2. У тебя откроется форма регистрации.
-
-Введи в нее твой личный код подключения к курсу Full Stack Online 48: 
- 
-D8Q2-C6W3-TV36V
- 
-Шаг 3. Заполни форму регистрации для получения профиля на нашей обучающей платформе.
-
-Пожалуйста, указывай свое настоящее имя и фамилию на английском языке, так нам будет проще найти тебя среди всех студентов.
- 
-Шаг 4. Дождись, пока тебя одобрят на курсе. 
-
-Каждого студента добавляет на курс модератор, поэтому подожди своего зачисления. Это не займет больше одного рабочего дня. Когда это произойдет, ты увидишь свой курс в меню Courses в твоем профиле.
-
-
-
-
-Более детально о регистрации можно посмотреть здесь:
-
-https://youtu.be/92BqRyqfdXs
-
-Также, обязательно нужно добавиться в Slack - это платформа где ты будешь общаться с преподавателем, ментором, клиент-менеджером и коллегами по курсу. Именно в Slack ты будешь узнавать о занятиях и все новости на курсе (Перейди по ссылке и зарегистрируйся):
-
-https://join.slack.com/t/htmlcss-48/shared_invite/zt-z82hauwh-byp_Cszy9moq9sM53hw1FA
-
-Поздравляем! Уже сегодня ты можешь начать свое обучение.
-
-
-
-Подключиться к курсу
-
+! 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    xlkcjvlkajhlkzjxhc
+</body>
+</html>
